--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,29 @@
 version: '3'
 services:
+  aplication:
+    build: .
+    container_name: aplication
+    ports:
+          - 8082:8082
+    depends_on:
+          - docker-mysql
   docker-mysql:
     image: mysql:latest
     container_name: mysql
     ports:
-      - 3307:3306
+      - 3306:3306
     environment:
       MYSQL_USER: dbmysql
       MYSQL_PASSWORD: root
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: bancodados
-  
     networks:
       - net
   admineruaa:
     image: adminer
     restart: always
     ports:
-      - 9091:8082
+      - 9091:8080
     networks:
       - net
 
