--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/bancodados?serverTimezone=UTC&createDatabaseIfNotExist=true
+    url: jdbc:mysql://mysql:3306/bancodados
     username: root
     password: root
   jpa:
