--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.0.3.RELEASE'
+    id 'org.springframework.boot' version '2.2.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
@@ -19,10 +19,10 @@ dependencies {
 	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.31.Final'
 	implementation group: 'javassist', name: 'javassist', version: '3.12.1.GA'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jdbc', version: '2.4.5'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.5.0'
  	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.25'
+ 	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
 	
 	}
 
