--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,17 @@ server:
   servlet:
     context-path: /
 spring:
+  main:
+     allow-bean-definition-overriding: true
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://mysql:3306/bancodados
+    url: jdbc:mysql://localhost:3306/bancodados?serverTimezone=UTC&createDatabaseIfNotExist=true
     username: root
     password: root
   jpa:
-    hibernate.ddl-auto: update
-    generate-ddl: true
-    show-sql: true
-    
+    hibernate:
+        ddl-auto: update
+        properties.hibernate.dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 springfox:
   documentation:
     swagger:
